Fix flickering

--- a/src/main/webapp/js/style.css
+++ b/src/main/webapp/js/style.css
@@ -21,3 +21,31 @@ h1 {
     height: 1.175rem !important;
   }
 }
+
+.pgv-details {
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+  margin-left: 0.65rem;
+  margin-bottom: 1.25rem;
+  margin-top: -0.25rem;
+
+  & > div {
+    display: flex;
+    align-items: center;
+    gap: 1ch;
+    font-size: 14px;
+    color: var(--text-color-secondary);
+    font-weight: 450;
+    text-box: trim-both;
+
+    a {
+      color: inherit;
+    }
+
+    svg {
+      width: 1.125rem;
+      height: 1.125rem;
+    }
+  }
+}
